--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
+    "axois": "^0.0.1-security",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.13.0"
+    "mongoose": "^8.13.0",
+    "protobufjs": "^7.4.0",
+    "quadtree-lib": "^1.0.9",
+    "socket.io": "^4.8.1"
   }
 }
